adding composer package information

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lukasz93p/dddPackage",
+    "name": "lukasz93p/ddd-package",
     "description": "DDD package",
     "type": "library",
     "license": "MIT",
