--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,18 @@
             "email": "lukasz9.3@interia.pl"
         }
     ],
-        "autoload": {
-            "psr-4": {
-                "Lukasz93P\\dddPackage\\": "src/"
-            }
-        },
+    "autoload": {
+        "psr-4": {
+            "Lukasz93P\\dddPackage\\": "src/"
+        }
+    },
     "require": {
-        "lukasz93p/asynchronous-tasks-queue": "dev-master",
+        "lukasz93p/asynchronous-tasks-queue": "1.3",
         "doctrine/orm": "^2.7",
-        "doctrine/doctrine-bundle": "^2.0",
+        "doctrine/doctrine-bundle": "1.12.7",
         "doctrine/annotations": "^1.8",
-        "lukasz93p/symfony-http-api": "dev-master"
+        "symfony/doctrine-bridge": "4.3.*",
+        "symfony/http-foundation": "4.3.*",
+        "lukasz93p/symfony-http-api": "^1.3"
     }
 }
